--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   ],
   "require": {
     "php": ">=5.4",
-    "laravel/framework": "5.*"
+    "laravel/framework": "5.*",
+    "imagine/imagine": "~0.5.0"
   },
   "autoload": {
     "psr-4": {
