Added skeleton for PHPUnit tests

--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,39 @@
 {
-  "name": "todstoychev/icr",
-  "type": "library",
-  "description": "Image crop resizer based on Imagine module",
-  "keywords": [
-    "image",
-    "resizer",
-    "imagine",
-    "crop",
-    "scale",
-    "image manipulation"
-  ],
-  "homepage": "https://github.com/todstoychev/icr",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Todor Todorov",
-      "email": "todstoychev@gmail.com"
+    "name": "todstoychev/icr",
+    "type": "library",
+    "description": "Image crop resizer based on Imagine module",
+    "keywords": [
+        "image",
+        "resizer",
+        "imagine",
+        "crop",
+        "scale",
+        "image manipulation"
+    ],
+    "homepage": "https://github.com/todstoychev/icr",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Todor Todorov",
+            "email": "todstoychev@gmail.com"
+        }
+    ],
+    "support": {
+        "email": "todstoychev@gmail.com"
+    },
+    "require": {
+        "php": ">=5.4",
+        "laravel/framework": "5.*",
+        "imagine/imagine": "~0.5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Todstoychev\\Icr\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Todstoychev\\Icr\\Tests": "tests/"
+        }
     }
-  ],
-  "support": {
-    "email": "todstoychev@gmail.com"
-  },
-  "require": {
-    "php": ">=5.4",
-    "laravel/framework": "5.*",
-    "imagine/imagine": "~0.5.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Todstoychev\\Icr\\": "src/"
-    }
-  }
 }
