--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">5.5.9",
         "imagine/imagine": "0.6.*",
-        "laravel/framework": ">5.0"
+        "illuminate/support": ">5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2"
