--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "illuminate/support": ">5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">5.0"
+        "phpunit/phpunit": "~4.8"
     },
     "autoload": {
         "psr-4": {
