--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.5.9",
         "imagine/imagine": "0.6.*",
-        "illuminate/support": ">5.0"
+        "illuminate/support": "5.1.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
