--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "illuminate/support": ">5.1",
         "illuminate/filesystem": ">5.1",
         "league/flysystem": ">1.0",
-        "nikic/php-parser": "^2.0"
+        "nikic/php-parser": "^2.0",
+        "vlucas/phpdotenv": "^2.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
