--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ matrix:
     fast_finish: true
     allow_failures:
         - php: hhvm
+        - php: nightly
 
 # faster builds on new travis setup not using sudo
 sudo: false
