--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.5.9",
         "imagine/imagine": "0.6.*",
         "illuminate/support": ">5.1",
-        "illuminate/filesystem": ">5.1"
+        "illuminate/filesystem": ">5.1",
+        "league/flysystem": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
