--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "imagine/imagine": "0.6.*",
         "illuminate/support": ">5.1",
         "illuminate/filesystem": ">5.1",
-        "league/flysystem": "^1.0"
+        "league/flysystem": "^1.0",
+        "symfony/http-foundation": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
