--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "illuminate/support": ">5.1",
         "illuminate/filesystem": ">5.1",
         "league/flysystem": "^1.0",
-        "symfony/http-foundation": "^3.0"
+        "symfony/http-foundation": "2.7.*"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8"
